[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Man Scene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Default Rocket.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/AsteroidSpawner.gd" type="Script" id=3]
[ext_resource path="res://res/fonts/fixedsys.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://res/sound/sound effects/overheat.warn.wav" type="AudioStream" id=5]
[ext_resource path="res://res/icons/Cooldown Bar/cooldown.bar.cool.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[node name="Man Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="DefaultRocket" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 500 )
z_index = 1

[node name="JukeBox" type="AudioStreamPlayer" parent="."]

[node name="AsteroidSpawner" type="Position2D" parent="."]
position = Vector2( 0, -50 )
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 10

[node name="SpamBar" type="ColorRect" parent="Node2D"]
margin_right = 105.0
margin_bottom = 40.0
color = Color( 0, 1, 0, 1 )

[node name="Score" type="Label" parent="Node2D"]
margin_left = 593.0
margin_top = -1.0
margin_right = 680.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "10"

[node name="SpamBarFrame" type="Sprite" parent="Node2D"]
scale = Vector2( 0.244, 0.325 )
texture = ExtResource( 6 )
centered = false

[node name="Overheat Warn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="StartLabel" type="Label" parent="."]
margin_right = 718.0
margin_bottom = 698.0
custom_fonts/font = SubResource( 2 )
text = "Approaching asteroid belt"
align = 1
valign = 1

[node name="StartLabelTimers" type="Node2D" parent="."]

[node name="FlashTimer" type="Timer" parent="StartLabelTimers"]
wait_time = 0.5
autostart = true

[node name="EndTimer" type="Timer" parent="StartLabelTimers"]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="StartLabelTimers/FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="StartLabelTimers/EndTimer" to="." method="_on_EndTimer_timeout"]
